<resources>
    <string name="app_name">FIrstApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="string_menthellworld">string/menthellworld</string>
    <string name="menthellworld">menthellworld</string>
    <string name="my_name">my name</string>
    <string name="kevinlamsd">Kevinlamsd</string>
    <string name="button">Toast</string>
    <string name="button2">Go</string>
    <string name="_0">0</string>
    <string name="kevinlam">kevinlam</string>
</resources>